kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: mahogo-ingress-nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mahogo-ingress
spec:
  ingressClassName: mahogo-ingress-nginx
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8998
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8999
